# apstra-webtool

./: .gitignore  README.md  pyproject.toml  requirements.txt  static
apstra_webtool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backup/: pyproject.toml
frontend/: package.json
frontend/src/: App.jsx  main.jsx  socket.jsx
frontend/src/components/: ApstraServer.css  ApstraServer.jsx  ConnectionManager.jsx  ConnectionState.jsx  GenericSystem.css  GenericSystem.jsx  MyForm.jsx  Welcome.jsx
scripts/: merge-to-fastapi.sh  re-selfsigned.sh  start.sh
src/webtool/: __main__.py  main.py
webtool/: __init__.py  main.py  test.py
webtool/components/: all_pages.py  apstra_server.py  data.json  frontend.py  gallery.py  generic_system.py  home_page.py  menu.py  snapshot.py  socket.py  sse.py  theme.py  todo_list.py
webtool/pages/: index_html.py  main_js.py  style_css.py
webtool/public/: sample.xlsx  sample_generic_system.csv  style.css
webtool/static/: index.html
webtool/static/css/: style.css
webtool/static/js/: main.js
