[tool.poetry]
name = "apstra-webtool"
version = "0.3.0"
description = "Apstra Webtool"
authors = ["Charlie Kim <kimcharli@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
webtool = "webtool.main:main"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
python-socketio = "^5.11.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
